@startuml

title __CLASSIC's Class Diagram__\n

  namespace state.examples.classic {
    class state.examples.classic.BrokenState {
        + BrokenState()
        + fix()
        + off()
        + on()
    }
  }
  

  namespace state.examples.classic {
    class state.examples.classic.ClassicStateDemo {
        {static} + main()
    }
  }
  

  namespace state.examples.classic {
    class state.examples.classic.LightSwitch {
        + LightSwitch()
        + fix()
        + off()
        + on()
        + setState()
    }
  }
  

  namespace state.examples.classic {
    class state.examples.classic.OffState {
        + OffState()
        + on()
    }
  }
  

  namespace state.examples.classic {
    class state.examples.classic.OnState {
        + OnState()
        + off()
    }
  }
  

  namespace state.examples.classic {
    class state.examples.classic.State {
        + fix()
        + off()
        + on()
    }
  }
  

  state.examples.classic.BrokenState -up-|> state.examples.classic.State
  state.examples.classic.LightSwitch o-- state.examples.classic.State : state
  state.examples.classic.OffState -up-|> state.examples.classic.State
  state.examples.classic.OnState -up-|> state.examples.classic.State


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
